Added stuff for saving and retrieving user(s) from mongodb
