# meldeapp-server/controllers/UserService.js
@@ -1,4 +1,7 @@
 'use strict';
+  
+var models = require('../repository/userdao.js');
+var User = models.User;
 
 exports.historyGET = function(args, res, next) {
   /**
@@ -111,13 +114,25 @@ exports.usersGET = function(args, res, next) {
   "picture" : "aeiou",
   "friends" : [ "046b6c7f-0b8a-43b9-b35d-6489e6daee91" ]
 } ];
+
+  User.retrieveAll(
+    function (err, users) {
+      res.setHeader('Content-Type', 'application/json');
+      if ((users)&&(!err)) {
+        res.end(JSON.stringify(users))
+      } else {
+        res.statusCode = 404;
+        res.end(JSON.stringify({"code": 404, "message": err.toString() }));
+      }
+  });
+  /*
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
   }
   else {
     res.end();
-  }
+  }*/
   
 }
 
@@ -134,10 +149,22 @@ exports.usersPOST = function(args, res, next) {
   "email" : "aeiou",
   "picture" : "aeiou",
   "friends" : [ "046b6c7f-0b8a-43b9-b35d-6489e6daee91" ]
-};
+  };
   if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+    var name = args.body.value.name;
+    var email = args.body.value.email;
+    var password = args.body.value.password
+    User.newUser(
+      name, email, password,
+      function (err, user) {
+        res.setHeader('Content-Type', 'application/json');
+        if ((user)&&(!err)) {
+          res.end(JSON.stringify(user))
+        } else {
+          res.statusCode = 400;
+          res.end(JSON.stringify({"code": 400, err}))
+        }
+      });
   }
   else {
     res.end();
@@ -149,7 +176,7 @@ exports.usersuuidGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   **/
-    var examples = {};
+  var examples = {};
   examples['application/json'] = {
   "upated" : "2000-01-23T04:56:07.000+0000",
   "created" : "2000-01-23T04:56:07.000+0000",
@@ -157,14 +184,18 @@ exports.usersuuidGET = function(args, res, next) {
   "email" : "aeiou",
   "picture" : "aeiou",
   "friends" : [ "046b6c7f-0b8a-43b9-b35d-6489e6daee91" ]
-};
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
+  };
+
+  User.retrieve(
+    args.uuid.value,
+    function (err, user) {
+      res.setHeader('Content-Type', 'application/json');
+      if ((user)&&(!err)) {
+        res.end(JSON.stringify(user))
+      } else {
+        res.statusCode = 404;
+        res.end(JSON.stringify({"code": 404, "message": err.toString() }));
+      }
+  });
 }
 
